--- a/mixx-frontend/package.json
+++ b/mixx-frontend/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
     "typescript": "^4.1.3",
+    "wavesurfer.js": "^6.4.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -73,7 +74,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
-    "@types/react-facebook-login": "^4.1.5"
+    "@types/react-facebook-login": "^4.1.5",
+    "@types/wavesurfer.js": "^6.0.3"
   },
   "description": "An Ionic project"
 }
