--- a/mixx-frontend/package.json
+++ b/mixx-frontend/package.json
@@ -32,6 +32,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.1.3",
     "wavesurfer.js": "^6.4.0",
     "web-vitals": "^0.2.4",
