--- a/mixx-backend/package.json
+++ b/mixx-backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.4.1",
     "fluent-ffmpeg": "^2.1.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
