--- a/mixx-frontend/public/manifest.json
+++ b/mixx-frontend/public/manifest.json
@@ -8,6 +8,11 @@
       "type": "image/x-icon"
     },
     {
+      "src": "favicon.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
       "src": "assets/icon/icon.png",
       "type": "image/png",
       "sizes": "512x512",
