removed loading but

--- a/mixx-frontend/package.json
+++ b/mixx-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "mixx",
   "version": "0.0.1",
   "private": true,
+  "proxy": "https://mixx-70ce9.appspot.com.storage.googleapis.com",
   "dependencies": {
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.1",
